# triton-tagi-dai

./: README.md  pyproject.toml
.claude/: settings.local.json
benchmarks/: bench_attention.py  bench_vs_cutagi.py  profile_bottlenecks.py
docs/: how_autocov_works.md
examples/: GatedResNet_autocov.py  autocov_residual_graph.py  cifar10_resnet18.py  cifar10_resnet18_autocov.py  cifar10_resnet18_autocov_copy.py  cifar10_resnet18_autocov_graph.py  cifar10_resnet18_autocov_graph_simple.py  custom_layer.py  lstm_timeseries_autocov.py  regression_autocov.py  regression_heteros.py  unet_segmentation_autocov.py
experiments/inference_init/: PLAN.md  mnist_mlp_sweep.py
tests/unit/: test_even_exp_heteros.py  test_inference_init.py  test_laplace_remax.py  test_layernorm.py  test_maxpool2d.py
tests/validation/: test_activations.py  test_attention.py  test_avgpool2d.py  test_batchnorm.py  test_cifar10_cnn.py  test_cifar10_cnn_bn_hrc_10epochs.py  test_cifar10_cnn_bn_remax_10epochs.py  test_cifar10_resnet18.py  test_conv2d.py  test_hrc_softmax.py  test_init.py  test_layernorm.py  test_linear.py  test_maxpool2d.py  test_mlp.py  test_mnist_hrc_10epochs.py  test_mnist_mlp.py  test_mnist_remax_10epochs.py  test_resblock.py
triton_tagi/: __init__.py  autocov.py  checkpoint.py  inference_init.py  lstm.py  network.py  param_init.py
triton_tagi/kernels/: attention.py  common.py
triton_tagi/layers/: __init__.py  avgpool2d.py  batchnorm2d.py  conv2d.py  embedding.py  even_exp.py  even_softplus.py  layernorm.py  linear.py  lstm.py  multihead_attention.py  positional_encoding.py  (+4 more)
(+15 files in other folders)
