[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triton-tagi"
version = "0.2.0"
description = "Bayesian neural networks via Tractable Approximate Gaussian Inference, implemented in pure PyTorch (CPU/CUDA/MPS)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
vis = ["matplotlib>=3.7"]
validation = ["pytagi"]

[tool.hatch.build.targets.wheel]
packages = ["triton_tagi"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
markers = ["cuda: requires a CUDA GPU"]
testpaths = ["tests"]
